<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_border_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="@drawable/background_border_gray"
            android:gravity="center"
            android:text="@string/tips_player_kernel"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/follow_global_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_button_corner_state"
            android:gravity="center"
            android:text="@string/text_follow_global"
            android:textColor="@color/text_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/media3_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_button_corner_state"
            android:gravity="center"
            android:text="@string/text_player_media3"
            android:textColor="@color/text_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/vlc_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_button_corner_state"
            android:gravity="center"
            android:text="@string/text_player_vlc"
            android:textColor="@color/text_black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mpv_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_button_corner_state"
            android:gravity="center"
            android:text="@string/text_player_mpv"
            android:textColor="@color/text_black"
            android:textSize="12sp" />
    </LinearLayout>
</layout>

